--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -390,6 +390,7 @@ jobs:
       with:
         path: ./build
         key: ${{ runner.os }}-${{ github.run_id }}
+        fail-on-cache-miss: true # If we can't restore the cache, then we won't have a launcher binary to run below
         enableCrossOsArchive: true
 
     - name: Launcher Version
@@ -467,6 +468,7 @@ jobs:
       with:
         path: ./build
         key: ${{ runner.os }}-${{ github.run_id }}
+        fail-on-cache-miss: true # If we can't restore the cache, then we won't have a launcher binary to run below
         enableCrossOsArchive: true
 
     - name: Launcher Version
@@ -515,6 +517,7 @@ jobs:
       with:
         path: ./build
         key: ${{ matrix.artifactos }}-${{ github.run_id }}
+        fail-on-cache-miss: true # If we can't restore the cache, then we won't have anything to upload
         enableCrossOsArchive: true
 
     - name: Upload Build
