--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -60,21 +60,7 @@ jobs:
         shell: bash
 
       - id: govulncheck
-        run: govulncheck -C . -format json ./... > govulncheck.json
-
-      # Exclude GO-2024-3166 since we do not believe it applies to go-tuf before v2, and additionally
-      # because we do not believe it applies to our usage since we do not use delegates.
-      # Exclude GO-2026-4348, GO-2026-4377, and GO-2026-4349 because they do not apply to go-tuf before v2.
-      - name: Evaluate govulncheck results
-        shell: bash
-        run: |
-          findingCount=$(jq -r '.finding | select ( . != null ) | .osv | select(. != "GO-2024-3166" and . != "GO-2026-4348" and . != "GO-2026-4377" and . != "GO-2026-4349")' govulncheck.json | wc -l)
-          findingCount=$((findingCount + 0))
-          if [[ $findingCount -ne 0 ]]; then
-            printf "govulncheck reports %d findings" "$findingCount"
-            jq -r '.finding | select ( . != null )' govulncheck.json
-            exit 1
-          fi
+        run: govulncheck ./...
 
   # This job is here as a github status check -- it allows us to move
   # the merge dependency from being on all the jobs to this single
