--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -417,6 +417,8 @@ jobs:
         working-directory: build
         run: |
           ./launcher download-osquery --directory osqueryd-download
+          ls osqueryd-download
+          ls osqueryd-download/osqueryd
           mv ./osqueryd-download/osqueryd/osqueryd* ./
 
       - name: Osquery Version
