--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,9 @@ test-cmds
 # Test binary, build with `go test -c`
 *.test
 
-# Output of the go coverage tool, specifically when used with LiteIDE
+# Output of the go coverage tool and gotestsum
 *.out
+test-results.xml
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
